--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>SHEIN</title>
 </head>
 <body>
-    <header>
-        <h1 align="center">SHEIN my</h1>
-    </header>
+    <table>
+        <td><h1 align="center">SHEIN my</h1></td>
+    </table>
     <br>
-    <form align="center" action="simpan.php" method="post">
+    <form>
     <label for="email">Mobile number or email address</label>
     <br>
     <input type="email" id="email" name="email" required>
@@ -23,7 +23,9 @@
         </tr>
     </table>
     <br>
-    <p align="center">--------- Or Join With -----------</p>
+    <table>
+    <p>--------- Or Join With -----------</p>
+    </table>
     <br>
     <table align="center" class="style">
         <tr>
@@ -48,7 +50,9 @@
     </select>
     </table>
     <br>
-    <p align="center">By continuing, you agree to our Privacy & Cookie Policy</p>
-    <p align="center">and Terms & Conditions</p>
+    <table>
+    <p>By continuing, you agree to our Privacy & Cookie Policy</p>
+    <p>and Terms & Conditions</p>
+    </table>
 </body>
 </html>
