--- a/index.html
+++ b/index.html
@@ -5,29 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHEIN</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <table>
-        <td><h1 align="center">SHEIN my</h1></td>
+    <table class="title">
+        <td><h1>SHEIN my</h1></td>
     </table>
     <br>
-    <form>
+    <form class="form">
     <label for="email">Mobile number or email address</label>
     <br>
     <input type="email" id="email" name="email" required>
     </form>
     <br>
-    <table align="center" class="style">
+    <table class="style">
         <tr>
             <td class="td teks-putih latar-hitam">CONTINUE</td>
         </tr>
     </table>
     <br>
-    <table>
+    <table class="Join">
     <p>--------- Or Join With -----------</p>
     </table>
     <br>
-    <table align="center" class="style">
+    <table class="style">
         <tr>
             <td class="td teks-hitam latar-putih">Continue with Google</td>
         </tr>
@@ -36,9 +37,9 @@
         </tr>
     </table>
     <br>
-    <table>
+    <table class="country">
     <br>
-    <select name="contry" id="contry" required>
+    <select name="country" id="country" required>
         <option value=""></option>
         <optgroup label="">
             <option>Malaysia</option>
@@ -50,7 +51,7 @@
     </select>
     </table>
     <br>
-    <table>
+    <table class="footer">
     <p>By continuing, you agree to our Privacy & Cookie Policy</p>
     <p>and Terms & Conditions</p>
     </table>
