--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <table class="title">
-        <td><h1>SHEIN my</h1></td>
-    </table>
+    
+        <h1 class="title">SHEIN my</h1>
     <br>
     <form class="form">
     <label for="email">Mobile number or email address</label>
@@ -20,40 +19,44 @@
     <br>
     <table class="style">
         <tr>
-            <td class="td teks-putih latar-hitam">CONTINUE</td>
+            <td>
+                 <button type="continue">CONTINUE</button>
+            </td>
         </tr>
     </table>
     <br>
-    <table class="Join">
-    <p>--------- Or Join With -----------</p>
+    <table>
+    <p class="Join">--------- Or Join With -----------</p>
     </table>
     <br>
     <table class="style">
         <tr>
-            <td class="td teks-hitam latar-putih">Continue with Google</td>
+            <td>
+                  <button type="google">Continue with Google</button>
+            </td>
         </tr>
         <tr>
-            <td class="td teks-hitam latar-putih">Continue with Facebook</td>
+            <td>
+                  <button type="facebook">Continue with Facebook</button>
+            </td>
         </tr>
     </table>
     <br>
     <table class="country">
-    <br>
-    <select name="country" id="country" required>
-        <option value=""></option>
-        <optgroup label="">
-            <option>Malaysia</option>
-            <option>Maldives</option>
-            <option>France</option>
-            <option>Italy</option>
-            <option>South Korea</option>
-        </optgroup>
-    </select>
+            <select name="country" id="country" required>
+                 <option value=""></option>
+                     <optgroup label="">
+                         <option>Malaysia</option>
+                         <option>Maldives</option>
+                         <option>France</option>
+                         <option>Italy</option>
+                         <option>South Korea</option>
+                    </optgroup>
+            </select>
     </table>
     <br>
-    <table class="footer">
-    <p>By continuing, you agree to our Privacy & Cookie Policy</p>
-    <p>and Terms & Conditions</p>
+    <p class="'footer">By continuing, you agree to our Privacy & Cookie Policy</p>
+    <p class="footer">and Terms & Conditions</p>
     </table>
 </body>
 </html>
