--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-    <table class="title">
-        <td><h1>SHEIN my</h1></td>
+    <table>
+        <h1 class="title">SHEINmy</h1>
     </table>
-    <br>
     <form class="form">
         <label for="email">Mobile number or email address</label>
         <br>
@@ -20,24 +19,28 @@
     </form>
     <table class="style">
         <tr>
-            <td class="td teks-putih latar-hitam">CONTINUE</td>
+            <td>
+                <button class="button1" type="continue">CONTINUE</button>
+            </td>
         </tr>
     </table>
-    <br>
-    <table class="Join">
-    <p>--------- Or Join With -----------</p>
+    <table>
+    <p class="Join">--------- Or Join With -----------</p>
     </table>
     <table class="style">
         <tr>
-            <td class="td teks-hitam latar-putih">Continue with Google</td>
+            <td>
+                <button class="button2" type="google">Continue with Google</button>
+            </td>
         </tr>
         <tr>
-            <td class="td teks-hitam latar-putih">Continue with Facebook</td>
+            <td>
+                <button class="button3" type="facebook">Continue with Facebook</button>
+            </td>
         </tr>
     </table>
-    <br>
     <table class="country">
-    <br>
+    <div class="div">
     <select name="country" id="country" required>
         <option value=""></option>
         <optgroup label="">
@@ -48,11 +51,13 @@
             <option>South Korea</option>
         </optgroup>
     </select>
+    </div>
     </table>
-    <br>
-    <table class="footer">
-    <p>By continuing, you agree to our Privacy & Cookie Policy</p>
-    <p>and Terms & Conditions</p>
+    <table class="table2">
+        <tr>
+            <td class="text1">By continuing, you agree to our<label class="privacy"> Privacy & Cookie Policy</label></td>
+            <td class="text2"> and<label class="terms"> Terms & Conditions.</label></td>
+        </tr>
     </table>
     
 </body>
