--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     <table class="country">
     <div class="div">
     <select name="country" id="country" required>
-        <option value=""></option>
-        <optgroup label="">
+        <option disabled="-"></option>
             <option>Malaysia</option>
             <option>Maldives</option>
             <option>France</option>
